--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,12 +43,14 @@ categories = ["encoding", "mathematics", "rendering"]
 
 [workspace.dependencies.fj]
 version = "0.46.0"
+path = "crates/fj"
 
 [workspace.dependencies.fj-export]
 version = "0.46.0"
 
 [workspace.dependencies.fj-host]
 version = "0.46.0"
+path = "crates/fj-host"
 
 [workspace.dependencies.fj-interop]
 version = "0.46.0"
@@ -61,12 +63,15 @@ version = "0.46.0"
 
 [workspace.dependencies.fj-operations]
 version = "0.46.0"
+path = "crates/fj-operations"
 
 [workspace.dependencies.fj-proc]
 version = "0.46.0"
+path = "crates/fj-proc"
 
 [workspace.dependencies.fj-viewer]
 version = "0.46.0"
 
 [workspace.dependencies.fj-window]
 version = "0.46.0"
+path = "crates/fj-window"
